--- a/end/02-03-text-content.html
+++ b/end/02-03-text-content.html
@@ -49,6 +49,16 @@
     <li>Once cooked, top with butter, bacon, chives and sea salt</li>
   </ol>
 
+  <hr> 
+
+  <h1>How to Be Saved by Grace through Faith?</h1>
+
+  <h2>Repent and Give Your Life to Christ</h2>
+  <h2>Pray without Ceasing</h2>
+  <h2>Read The Holy Bible</h2>
+  <h2>Praise the Lord!</h2>
+  <h2>Memorize Scripture</h2>
+  <h2>Dedicate Your Whole Life to the Lord!</h2>
 
 </body>
 
